@@ -6,21 +6,18 @@ import de.kiaim.model.configuration.data.ColumnConfiguration;
 import de.kiaim.model.configuration.data.DataConfiguration;
 import de.kiaim.model.data.*;
 import de.kiaim.model.enumeration.DataType;
-import de.kiaim.platform.model.configuration.KiAimConfiguration;
+import de.kiaim.platform.model.configuration.Job;
 import de.kiaim.platform.config.SerializationConfig;
 import de.kiaim.platform.exception.*;
 import de.kiaim.platform.helper.DataschemeGenerator;
 import de.kiaim.platform.model.DataRowTransformationError;
 import de.kiaim.platform.model.DataTransformationError;
 import de.kiaim.platform.model.TransformationResult;
-import de.kiaim.platform.model.dto.DataSetInfo;
-import de.kiaim.platform.model.dto.FileInformation;
-import de.kiaim.platform.model.dto.TransformationResultPage;
-import de.kiaim.platform.model.dto.LoadDataRequest;
+import de.kiaim.platform.model.dto.*;
 import de.kiaim.platform.model.entity.*;
+import de.kiaim.platform.model.enumeration.HoldOutSelector;
 import de.kiaim.platform.model.enumeration.ProcessStatus;
 import de.kiaim.platform.model.enumeration.RowSelector;
-import de.kiaim.platform.model.enumeration.Step;
 import de.kiaim.platform.model.file.FileConfiguration;
 import de.kiaim.platform.processor.DataProcessor;
 import de.kiaim.platform.repository.*;
@@ -45,17 +42,13 @@ import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 @Service
 public class DatabaseService {
 
 	private final Logger LOGGER = LoggerFactory.getLogger(DatabaseService.class);
 
-	private final KiAimConfiguration kiAimConfiguration;
-
 	private final Connection connection;
-	private final ExternalProcessRepository externalProcessRepository;
 	private final DataProcessingRepository dataProcessingRepository;
 	private final DataSetRepository dataSetRepository;
 	private final DataTransformationErrorRepository errorRepository;
@@ -66,16 +59,15 @@ public class DatabaseService {
 
 	private final DataSetService dataSetService;
 	private final DataProcessorService dataProcessorService;
+	private final StepService stepService;
 
 	@Autowired
-	public DatabaseService(final KiAimConfiguration kiAimConfiguration, final DataSource dataSource,
-	                       final DataProcessingRepository dataProcessingRepository,
+	public DatabaseService(final DataSource dataSource, final DataProcessingRepository dataProcessingRepository,
 	                       final DataTransformationErrorRepository errorRepository,
-	                       final ExternalProcessRepository externalProcessRepository,
 	                       final SerializationConfig serializationConfig, final DataSetRepository dataSetRepository,
 	                       final ProjectRepository projectRepository, final DataschemeGenerator dataschemeGenerator,
-	                       final DataSetService dataSetService, final DataProcessorService dataProcessorService) {
-		this.kiAimConfiguration = kiAimConfiguration;
+	                       final DataSetService dataSetService, final DataProcessorService dataProcessorService,
+	                       final StepService stepService) {
 		this.connection = DataSourceUtils.getConnection(dataSource);
 		this.dataProcessingRepository = dataProcessingRepository;
 		this.errorRepository = errorRepository;
@@ -85,7 +77,7 @@ public class DatabaseService {
 		this.dataschemeGenerator = dataschemeGenerator;
 		this.dataSetService = dataSetService;
 		this.dataProcessorService = dataProcessorService;
-		this.externalProcessRepository = externalProcessRepository;
+		this.stepService = stepService;
 	}
 
 	/**
@@ -229,7 +221,7 @@ public class DatabaseService {
 	@Transactional
 	public void storeTransformationResult(final TransformationResult transformationResult,
 	                                      final DataProcessingEntity dataProcessingEntity,
-	                                      final List<Step> processed)
+	                                      final List<Job> processed)
 			throws BadDataConfigurationException, BadDataSetIdException, BadStateException, InternalDataSetPersistenceException {
 		// Delete the existing data set
 		deleteDataSetIfNotConfirmedOrThrow(dataProcessingEntity.getDataSet());
@@ -249,146 +241,213 @@ public class DatabaseService {
 	}
 
 	/**
-	 * Stores the given algorithm configuration
+	 * Creates the hold-out split for the original data set.
+	 * This is only possible if the data is stored and not confirmed.
 	 *
-	 * @param configuration   The algorithm configuration to be stored.
-	 * @param externalProcess The process the configuration should be associated with.
+	 * @param project           The project.
+	 * @param holdOutPercentage The percentage of rows that should be added to the hol-out split. Must be between 0 and 1.
+	 * @throws BadStateException                   If the state of the data forbids to create the hold-out split.
+	 * @throws BadArgumentException                If the given percentage is invalid.
+	 * @throws InternalDataSetPersistenceException If executing the queries failed.
 	 */
 	@Transactional
-	public void storeConfiguration(@Nullable final String configuration, final ExternalProcessEntity externalProcess) {
-		externalProcess.setConfiguration(configuration);
-		externalProcessRepository.save(externalProcess);
+	public void createHoldOutSplit(final ProjectEntity project, final float holdOutPercentage)
+			throws BadStateException, BadArgumentException, InternalDataSetPersistenceException {
+		if (project.getOriginalData().getDataSet() == null || !project.getOriginalData().getDataSet().isStoredData()) {
+			throw new BadStateException(BadStateException.NO_DATA_SET,
+			                            "Creating the hold-out split requires the original date set to be stored!");
+		}
+
+		if (project.getOriginalData().getDataSet().isConfirmedData()) {
+			throw new BadStateException(BadStateException.DATE_CONFIRMED,
+			                            "Creating the hold-out split cannot be done after the data has been confirmed!");
+		}
+
+		if (holdOutPercentage < 0 || holdOutPercentage > 1) {
+			throw new BadArgumentException(BadArgumentException.HOLD_OUT_PERCENTAGE,
+			                               "Hold out percentage must be between 0 and 1!");
+		}
+
+		final String tableName = getTableName(project.getOriginalData().getDataSet().getId());
+
+		// Reset existing hold-out split
+		if (project.getOriginalData().isHasHoldOut()) {
+			final String resetQuery =
+					"""
+					UPDATE %s
+					SET %s = false;
+					""".formatted(tableName, DataschemeGenerator.HOLD_OUT_FLAG_NAME);
+
+			try {
+				executeStatement(resetQuery);
+			} catch (final SQLException e) {
+				throw new InternalDataSetPersistenceException(InternalDataSetPersistenceException.HOLD_OUT, "Failed to reset the hold-out split!", e);
+			}
+
+			project.getOriginalData().setHasHoldOut(false);
+		}
+
+		projectRepository.save(project);
+
+		// Set the seed
+		final double seed = project.randomDouble(-1, 1);
+		project.getOriginalData().setHoldOutSeed(seed);
+
+		final String seedQuery = "SELECT setseed(%s);".formatted(Double.toString(seed));
+
+		try {
+			executeStatement(seedQuery);
+		} catch (final SQLException e) {
+			throw new InternalDataSetPersistenceException(InternalDataSetPersistenceException.HOLD_OUT, "Failed to set the seed!", e);
+		}
+
+		// Create new hold-out split
+		final String query =
+				"""
+				WITH selected_rows AS (
+				  SELECT ctid
+				  FROM %s
+				  ORDER BY random()
+				  LIMIT (SELECT round(count(*) * %s) FROM %s)
+				)
+				UPDATE %s
+				SET %s = true
+				WHERE ctid IN (SELECT ctid FROM selected_rows);
+				""".formatted(tableName, Float.toString(holdOutPercentage), tableName, tableName,
+				              DataschemeGenerator.HOLD_OUT_FLAG_NAME);
+
+		try {
+			executeStatement(query);
+		} catch (final SQLException e) {
+			throw new InternalDataSetPersistenceException(InternalDataSetPersistenceException.HOLD_OUT, "Failed to create the hold-out split!", e);
+		}
+
+		project.getOriginalData().setHasHoldOut(true);
+		project.getOriginalData().setHoldOutPercentage(holdOutPercentage);
+		projectRepository.save(project);
 	}
 
 	/**
 	 * Stores an arbitrary configuration under the given identifier.
 	 * If a configuration with the given name is already present, it will be overwritten.
 	 *
-	 * @param configurationName Identifier for the configuration.
-	 * @param configuration     Configuration to store.
-	 * @param project           The project the configuration should be associated with.
-	 * @throws BadConfigurationNameException             If the configuration name is not defined.
-	 * @throws InternalApplicationConfigurationException If the step that contains the configuration name is not used in any stage.
+	 * @param configName    Identifier for the configuration.
+	 * @param url           The URL for starting the process.
+	 * @param configuration Configuration to store.
+	 * @param project       The project the configuration should be associated with.
+	 * @throws BadConfigurationNameException If the configuration name is not defined.
+	 * @throws BadStateException             If the process is running or scheduled.
 	 */
 	@Transactional
-	public void storeConfiguration(final String configurationName, final String configuration,
-	                               final ProjectEntity project) throws BadConfigurationNameException, InternalApplicationConfigurationException {
-		final ExternalProcessEntity process = getExternalProcessForConfigurationName(project, configurationName);
-		this.storeConfiguration(configuration, process);
+	public void storeConfiguration(final String configName, @Nullable final String url,
+	                               @Nullable final String configuration, final ProjectEntity project
+	) throws BadStateException, BadConfigurationNameException {
+		final var configDefinition = stepService.getExternalConfiguration(configName);
+		ConfigurationListEntity configurationList = project.addConfigurationList(configDefinition);
+
+		BackgroundProcessConfiguration config;
+		if (configurationList.getConfigurations().isEmpty()) {
+			config = new BackgroundProcessConfiguration();
+			configurationList.getConfigurations().add(config);
+			config.setConfigurationIndex(configurationList.getConfigurations().size() - 1);
+		} else {
+			config = configurationList.getConfigurations().get(0);
+
+			for (final var usage: config.getUsages()) {
+
+				if (usage.getExternalProcessStatus() == ProcessStatus.SCHEDULED ||
+				    usage.getExternalProcessStatus() == ProcessStatus.RUNNING) {
+					throw new BadStateException(BadStateException.PROCESS_STARTED,
+					                            "Process cannot be configured if the it is scheduled or started!");
+				}
+			}
+		}
+
+		config.setProcessUrl(url);
+		config.setConfiguration(configuration);
+
+		projectRepository.save(project);
 	}
 
 	/**
-	 * Returns the process for the step that configuration name matches the given name.
+	 * Returns the info objects of the data set associated with the given source in the given project.
 	 *
-	 * @param project           The project.
-	 * @param configurationName The configured configuration name.
-	 * @return The process.
-	 * @throws BadConfigurationNameException             If the configuration name is not defined.
-	 * @throws InternalApplicationConfigurationException If the step that contains the configuration name is not used in any stage.
-	 */
-	public ExternalProcessEntity getExternalProcessForConfigurationName(final ProjectEntity project,
-	                                                                    final String configurationName)
-			throws BadConfigurationNameException, InternalApplicationConfigurationException {
-		// Search for the step that has the given configurationName
-		Integer endpoint = null;
-		for (int endpointIndex = 0; endpointIndex < kiAimConfiguration.getExternalServerEndpoints().size(); endpointIndex++) {
-			if (kiAimConfiguration.getExternalServerEndpoints().get(endpointIndex).getConfigurationName()
-			                      .equals(configurationName)) {
-				endpoint = endpointIndex;
-				break;
-			}
-		}
-
-		if (endpoint == null) {
-			throw new BadConfigurationNameException(BadConfigurationNameException.NOT_FOUND,
-			                                        "Project with ID '" + project.getId() +
-			                                        "' has no configuration with the name '" + configurationName +
-			                                        "'!");
-		}
-
-
-		// Search for the step that has the given configurationName
-		Step processStep = null;
-		for (final var entry : kiAimConfiguration.getSteps().entrySet()) {
-			if (entry.getValue().getExternalServerEndpointIndex().equals(endpoint)) {
-				processStep = entry.getKey();
-				break;
-			}
-		}
-
-		if (processStep == null) {
-			throw new BadConfigurationNameException(BadConfigurationNameException.NOT_FOUND,
-			                                        "Project with ID '" + project.getId() +
-			                                        "' has no configuration with the name '" + configurationName +
-			                                        "'!");
-		}
-
-		// Get the execution for the found step
-		// TODO breaks if a job is part of multiple stages. Configuraitons/processes should be stored separatly in the project
-		Step exectionStep = null;
-		for (final var entry : kiAimConfiguration.getStages().entrySet()) {
-			if (entry.getValue().getJobs().contains(processStep)) {
-				exectionStep = entry.getKey();
-			}
-		}
-
-		if (exectionStep == null) {
-			throw new InternalApplicationConfigurationException(
-					InternalApplicationConfigurationException.MISSING_STAGE_CONFIGURATION,
-					"Step '" + processStep + " is not used in any stage'!");
-		}
-
-		final ExecutionStepEntity executionStep = project.getPipelines().get(0).getStageByStep(exectionStep);
-		return executionStep.getProcess(processStep).get();
-	}
-
-	/**
-	 * Returns the info objects of the data set associated with the given step in the given project.
-	 *
-	 * @param project The project
-	 * @param step    The step the data sets is associated with.
+	 * @param project       The project
+	 * @param dataSetSource Source of the data set.
 	 * @return The info object.
-	 * @throws BadDataSetIdException               If no dataset exists.
-	 * @throws InternalDataSetPersistenceException If the internal queries failed.
+	 * @throws BadDataSetIdException                     If no dataset exists.
+	 * @throws BadStateException                         If the data set does not exist.
+	 * @throws BadStepNameException                      If the source is a job and the job does not exist or does not have a data set.
+	 * @throws InternalApplicationConfigurationException If the process is not configured correctly
+	 * @throws InternalDataSetPersistenceException       If the internal queries failed.
+	 * @throws InternalInvalidStateException             If the application is in an invalid state.
+	 * @throws InternalMissingHandlingException          If no handling exists for the selector of the process.
 	 */
 	public DataSetInfo getInfo(final ProjectEntity project,
-	                           final Step step) throws BadDataSetIdException, InternalDataSetPersistenceException {
-		final DataSetEntity dataSetEntity = dataSetService.getDataSetEntityOrThrow(project, step);
+	                           final DataSetSource dataSetSource)
+			throws BadDataSetIdException, InternalDataSetPersistenceException, BadStepNameException, InternalApplicationConfigurationException, BadStateException, InternalInvalidStateException, InternalMissingHandlingException {
+		final DataSetEntity dataSetEntity = dataSetService.getDataSetEntityOrThrow(project, dataSetSource);
+
+		if (!dataSetEntity.isStoredData()) {
+			return new DataSetInfo(0, 0, false, 0.0f);
+		}
+
 		final int rows = countEntries(dataSetEntity.getId());
 		final int invalidRows = countInvalidRows(dataSetEntity.getId());
-		return new DataSetInfo(rows, invalidRows);
+
+		boolean hasHoldOutSplit = false;
+		float holdOutPercentage = 0.0f;
+		final OriginalDataEntity originalData = dataSetEntity.getOriginalData();
+		if (originalData != null) {
+			hasHoldOutSplit = originalData.isHasHoldOut();
+			holdOutPercentage = originalData.getHoldOutPercentage();
+		}
+
+		return new DataSetInfo(rows, invalidRows, hasHoldOutSplit, holdOutPercentage);
 	}
 
 	/**
-	 * Exports the configuration of the data set associated with the given project and step.
+	 * Exports the configuration of the data set associated with the given project and source.
 	 *
-	 * @param project The project of which the configuration should be exported.
+	 * @param project       The project of which the configuration should be exported.
+	 * @param dataSetSource Source of the data set.
 	 * @return The configuration.
-	 * @throws BadDataSetIdException If no DataConfiguration is associated with the given project.
-	 * @throws InternalIOException   If the DataConfiguration could not be deserialized from the stored JSON.
+	 * @throws BadDataSetIdException                     If no DataConfiguration is associated with the given project.
+	 * @throws BadStateException                         If the data set does not exist.
+	 * @throws BadStepNameException                      If the source is a job and the job does not exist or does not have a data set.
+	 * @throws InternalApplicationConfigurationException If the process is not configured correctly
+	 * @throws InternalInvalidStateException             If the application is in an invalid state.
+	 * @throws InternalIOException                       If the DataConfiguration could not be deserialized from the stored JSON.
+	 * @throws InternalMissingHandlingException          If no handling exists for the selector of the process.
 	 */
 	@Transactional
-	public DataConfiguration exportDataConfiguration(final ProjectEntity project, final Step step)
-			throws BadDataSetIdException, InternalIOException {
-		final DataSetEntity dataSetEntity = dataSetService.getDataSetEntityOrThrow(project, step);
+	public DataConfiguration exportDataConfiguration(final ProjectEntity project, final DataSetSource dataSetSource)
+			throws BadDataSetIdException, InternalIOException, BadStepNameException, InternalApplicationConfigurationException, BadStateException, InternalInvalidStateException, InternalMissingHandlingException {
+		final DataSetEntity dataSetEntity = dataSetService.getDataSetEntityOrThrow(project, dataSetSource);
 		return getDetachedDataConfiguration(dataSetEntity);
 	}
 
 	/**
-	 * Exports the data set associated with the given project and step.
+	 * Exports the data set associated with the given project.
 	 *
-	 * @param project The project of which the data set should be exported.
-	 * @param step    The step of which the data set should be exported.
+	 * @param project         The project of which the data set should be exported.
+	 * @param holdOutSelector Which hold-out rows should be selected.
+	 * @param dataSetSource   Source of the data set.
 	 * @return The DataSet.
-	 * @throws BadDataSetIdException               If no DataConfiguration is associated with the given project.
-	 * @throws InternalDataSetPersistenceException If the data set could not be exported due to an internal error.
-	 * @throws InternalIOException                 If the DataConfiguration could not be deserialized from the stored JSON.
+	 * @throws BadDataSetIdException                     If no DataConfiguration is associated with the given project.
+	 * @throws BadStateException                         If the data set does not exist.
+	 * @throws BadStepNameException                      If the source is a job and the job does not exist or does not have a data set.
+	 * @throws InternalApplicationConfigurationException If the process is not configured correctly
+	 * @throws InternalDataSetPersistenceException       If the data set could not be exported due to an internal error.
+	 * @throws InternalInvalidStateException             If the application is in an invalid state.
+	 * @throws InternalIOException                       If the DataConfiguration could not be deserialized from the stored JSON.
+	 * @throws InternalMissingHandlingException          If no handling exists for the selector of the process.
 	 */
 	@Transactional
-	public DataSet exportDataSet(final ProjectEntity project, final Step step)
-			throws InternalDataSetPersistenceException, BadDataSetIdException, InternalIOException {
+	public DataSet exportDataSet(final ProjectEntity project, final HoldOutSelector holdOutSelector, final DataSetSource dataSetSource)
+			throws InternalDataSetPersistenceException, BadDataSetIdException, InternalIOException, BadStepNameException, InternalApplicationConfigurationException, BadStateException, InternalInvalidStateException, InternalMissingHandlingException {
 		try {
-			return exportDataSet(project, new ArrayList<>(), step);
+			return exportDataSet(project, new ArrayList<>(), holdOutSelector, dataSetSource);
 		} catch (final BadColumnNameException e) {
 			throw new InternalDataSetPersistenceException(InternalDataSetPersistenceException.DATA_SET_EXPORT,
 			                                              "Failed to export the dataset due to an error in the column selection!",
@@ -398,16 +457,18 @@ public class DatabaseService {
 
 	/**
 	 * Exports the data of the given DataSetEntity.
-	 * @param dataSetEntity The data set entity.
+	 *
+	 * @param dataSetEntity   The data set entity.
+	 * @param holdOutSelector Which hold-out rows should be selected.
 	 * @return The data of the data set.
 	 * @throws InternalDataSetPersistenceException If the data could not be exported.
 	 * @throws InternalIOException                 If the data configuration could not be loaded.
 	 */
 	@Transactional
-	public DataSet exportDataSet(final DataSetEntity dataSetEntity)
+	public DataSet exportDataSet(final DataSetEntity dataSetEntity, final HoldOutSelector holdOutSelector)
 			throws InternalDataSetPersistenceException, InternalIOException {
 		try {
-			return exportDataSet(dataSetEntity, new ArrayList<>());
+			return exportDataSet(dataSetEntity, new ArrayList<>(), holdOutSelector);
 		} catch (final BadColumnNameException e) {
 			throw new InternalDataSetPersistenceException(InternalDataSetPersistenceException.DATA_SET_EXPORT,
 			                                              "Failed to export the dataset due to an error in the column selection!",
@@ -416,24 +477,31 @@ public class DatabaseService {
 	}
 
 	/**
-	 * Exports the data set associated with the given project and step.
+	 * Exports the data set associated with the given project and selector.
 	 * Returns the columns with the given names in the given order.
 	 * If no column names are provided, all columns are exported.
 	 *
-	 * @param project     The project of which the data set should be exported.
-	 * @param columnNames Names of the columns to export. If empty, all columns will be exported.
-	 * @param step        The step of which the data set should be exported.
+	 * @param project         The project of which the data set should be exported.
+	 * @param columnNames     Names of the columns to export. If empty, all columns will be exported.
+	 * @param holdOutSelector Which hold-out rows should be selected.
+	 * @param dataSetSource   Source of the data set.
 	 * @return The DataSet.
-	 * @throws BadColumnNameException              If the data set does not contain a column with the given names.
-	 * @throws BadDataSetIdException               If no DataConfiguration is associated with the given project.
-	 * @throws InternalDataSetPersistenceException If the data set could not be exported due to an internal error.
-	 * @throws InternalIOException                 If the DataConfiguration could not be deserialized from the stored JSON.
+	 * @throws BadColumnNameException                    If the data set does not contain a column with the given names.
+	 * @throws BadDataSetIdException                     If no DataConfiguration is associated with the given project.
+	 * @throws BadStateException                         If the data set does not exist.
+	 * @throws BadStepNameException                      If the source is a job and the job does not exist or does not have a data set.
+	 * @throws InternalApplicationConfigurationException If the process is not configured correctly
+	 * @throws InternalDataSetPersistenceException       If the data set could not be exported due to an internal error.
+	 * @throws InternalIOException                       If the DataConfiguration could not be deserialized from the stored JSON.
+	 * @throws InternalInvalidStateException             If the application is in an invalid state.
+	 * @throws InternalMissingHandlingException          If no handling exists for the selector of the process.
 	 */
 	@Transactional
-	public DataSet exportDataSet(final ProjectEntity project, final List<String> columnNames, final Step step)
-			throws BadColumnNameException, BadDataSetIdException, InternalDataSetPersistenceException, InternalIOException {
-		final DataSetEntity dataSetEntity = dataSetService.getDataSetEntityOrThrow(project, step);
-		return exportDataSet(dataSetEntity, columnNames);
+	public DataSet exportDataSet(final ProjectEntity project, final List<String> columnNames,
+	                             final HoldOutSelector holdOutSelector, final DataSetSource dataSetSource)
+			throws BadColumnNameException, BadDataSetIdException, InternalDataSetPersistenceException, InternalIOException, BadStepNameException, InternalApplicationConfigurationException, BadStateException, InternalInvalidStateException, InternalMissingHandlingException {
+		final DataSetEntity dataSetEntity = dataSetService.getDataSetEntityOrThrow(project, dataSetSource);
+		return exportDataSet(dataSetEntity, columnNames, holdOutSelector);
 	}
 
 	/**
@@ -441,17 +509,19 @@ public class DatabaseService {
 	 * Returns the columns with the given names in the given order.
 	 * If no column names are provided, all columns are exported.
 	 *
-	 * @param dataSetEntity The data set entity.
-	 * @param columnNames   Names of the columns to export. If empty, all columns will be exported.
+	 * @param dataSetEntity   The data set entity.
+	 * @param columnNames     Names of the columns to export. If empty, all columns will be exported.
+	 * @param holdOutSelector Which hold-out rows should be selected.
 	 * @return The DataSet.
 	 * @throws BadColumnNameException              If the data set does not contain a column with the given names.
 	 * @throws InternalDataSetPersistenceException If the data set could not be exported due to an internal error.
 	 * @throws InternalIOException                 If the DataConfiguration could not be deserialized from the stored JSON.
 	 */
 	@Transactional
-	public DataSet exportDataSet(final DataSetEntity dataSetEntity, final List<String> columnNames)
+	public DataSet exportDataSet(final DataSetEntity dataSetEntity, final List<String> columnNames,
+	                             final HoldOutSelector holdOutSelector)
 			throws BadColumnNameException, InternalDataSetPersistenceException, InternalIOException {
-		return exportDataSet(dataSetEntity, columnNames, null, false, 0, 0);
+		return exportDataSet(dataSetEntity, RowSelector.ALL, columnNames, holdOutSelector, false, 0, 0, false);
 	}
 
 	/**
@@ -472,20 +542,26 @@ public class DatabaseService {
 	}
 
 	/**
-	 * Exports the transformation result associated with the given project and step.
+	 * Exports the transformation result associated with the given project and source.
 	 *
-	 * @param project The project of which the data set should be exported.
-	 * @param step    The step of which the data set should be exported.
+	 * @param project         The project of which the data set should be exported.
+	 * @param holdOutSelector Which hold-out rows should be selected.
+	 * @param dataSetSource   Source of the data set.
 	 * @return The transformation result.
-	 * @throws BadDataSetIdException               If no DataConfiguration is associated with the given project.
-	 * @throws InternalDataSetPersistenceException If the data set could not be exported due to an internal error.
-	 * @throws InternalIOException                 If the DataConfiguration could not be deserialized from the stored JSON.
+	 * @throws BadDataSetIdException                     If no DataConfiguration is associated with the given project.
+	 * @throws BadStateException                         If the data set does not exist.
+	 * @throws BadStepNameException                      If the source is a job and the job does not exist or does not have a data set.
+	 * @throws InternalApplicationConfigurationException If the process is not configured correctly
+	 * @throws InternalDataSetPersistenceException       If the data set could not be exported due to an internal error.
+	 * @throws InternalIOException                       If the DataConfiguration could not be deserialized from the stored JSON.
+	 * @throws InternalInvalidStateException             If the application is in an invalid state.
+	 * @throws InternalMissingHandlingException          If no handling exists for the selector of the process.
 	 */
 	@Transactional
-	public TransformationResult exportTransformationResult(final ProjectEntity project, final Step step)
-			throws BadDataSetIdException, InternalDataSetPersistenceException, InternalIOException {
-		final DataSet dataSet = exportDataSet(project, step);
-		final DataSetEntity dataSetEntity = dataSetService.getDataSetEntityOrThrow(project, step);
+	public TransformationResult exportTransformationResult(final ProjectEntity project, final HoldOutSelector holdOutSelector, final DataSetSource dataSetSource)
+			throws BadDataSetIdException, InternalDataSetPersistenceException, InternalIOException, BadStepNameException, InternalApplicationConfigurationException, BadStateException, InternalInvalidStateException, InternalMissingHandlingException {
+		final DataSet dataSet = exportDataSet(project, holdOutSelector, dataSetSource);
+		final DataSetEntity dataSetEntity = dataSetService.getDataSetEntityOrThrow(project, dataSetSource);
 
 		final Map<Integer, DataRowTransformationError> rowErrors = new HashMap<>();
 		for (final var error : dataSetEntity.getDataTransformationErrors()) {
@@ -501,80 +577,69 @@ public class DatabaseService {
 	}
 
 	/**
-	 * Exports a page of the transformation result associated with the given project and step.
+	 * Exports a page of the transformation result associated with the given step in the given project.
+	 * Starts at the given page number taking the given page size into account.
 	 * Returns the columns with the given names in the given order.
 	 * If no column names are provided, all columns are exported.
 	 * Includes only the rows that macht the given row selector.
 	 * Encodes the data as specified in the given LoadDataRequest.
 	 *
-	 * @param project         The project of which the data set should be exported.
-	 * @param step            The step of which the data set should be exported.
-	 * @param columnNames     Names of the columns to export. If empty, all columns will be exported.
-	 * @param pageNumber      Number of the page to be exported.
-	 * @param pageSize        Number of entries per page.
+	 * @param dataSetEntity   The data set to be exported form.
 	 * @param rowSelector     Selector specifying which rows should be included.
+	 * @param pageNumber      The number of the page to be exported.
+	 * @param pageSize        The number of items per page.
 	 * @param loadDataRequest Export settings.
-	 * @return The page of the transformation result.
+	 * @return The page containing the data and meta-data about the page.
 	 * @throws BadColumnNameException              If the data set does not contain a column with the given names.
-	 * @throws BadDataSetIdException               If no DataConfiguration is associated with the given project.
 	 * @throws InternalDataSetPersistenceException If the data set could not be exported due to an internal error.
 	 * @throws InternalIOException                 If the DataConfiguration could not be deserialized from the stored JSON.
 	 */
 	@Transactional
-	public TransformationResultPage exportTransformationResultPage(final ProjectEntity project, final Step step,
-	                                                               final List<String> columnNames, final int pageNumber,
-	                                                               final int pageSize, final RowSelector rowSelector,
+	public TransformationResultPage exportTransformationResultPage(final DataSetEntity dataSetEntity,
+	                                                               final RowSelector rowSelector,
+	                                                               final int pageNumber,
+	                                                               final int pageSize,
 	                                                               final LoadDataRequest loadDataRequest)
-			throws BadColumnNameException, BadDataSetIdException, InternalDataSetPersistenceException, InternalIOException {
-		final DataSetEntity dataSetEntity = dataSetService.getDataSetEntityOrThrow(project, step);
+			throws InternalDataSetPersistenceException, BadColumnNameException, InternalIOException {
+		final List<String> columnNames = loadDataRequest != null ? loadDataRequest.getColumnNames() : new ArrayList<>();
+
+		var calcRowNumbers = rowSelector != RowSelector.ALL;
 
 		final var startRow = (pageNumber - 1) * pageSize;
 		final var endRow = startRow + pageSize;
 
-		final int numberTotalRows = countEntries(dataSetEntity.getId());
-		final int numberInvalidRows = countInvalidRows(dataSetEntity.getId());
-
 		final Map<Integer, Integer> columnIndexMapping = dataSetService.getColumnIndexMapping(dataSetEntity.getDataConfiguration(), columnNames);
+		final DataSet dataSet = exportDataSet(dataSetEntity, rowSelector, columnNames,
+		                                      loadDataRequest.getHoldOutSelector(), true, startRow, pageSize, calcRowNumbers);
 
-		List<Integer> rowNumbers;
-		final int numberRows;
-		if (rowSelector == RowSelector.VALID) {
-			final List<Integer> invalid = columnNames.isEmpty()
-			                              ? errorRepository.findRowIndexByDataSetIdOrderByRowIndexAsc(
-					dataSetEntity.getId())
-			                              : errorRepository.findRowIndexByDataSetIdAndColumnIndexInOrderByRowIndexAsc(
-					                              dataSetEntity.getId(), columnIndexMapping.keySet());
-			rowNumbers = IntStream.rangeClosed(0, numberTotalRows).boxed().collect(Collectors.toList());
-			rowNumbers.removeAll(invalid);
-			rowNumbers = rowNumbers.subList(startRow, endRow);
-
-			numberRows = numberTotalRows - numberInvalidRows;
+		List<Integer> rowNumbers = null;
+		final Set<DataTransformationErrorEntity> errors;
+		if (calcRowNumbers) {
+			rowNumbers = dataSet.getData().stream().map(a -> (Integer) a.get(a.size() - 1)).toList();
+			errors = errorRepository.findByDataSetIdAndRowIndexIn(dataSetEntity.getId(), rowNumbers);
 		} else {
-			rowNumbers = columnNames.isEmpty()
-			             ? errorRepository.findRowIndexByDataSetIdOrderByRowIndexAsc(dataSetEntity.getId(), pageSize,
-			                                                                         startRow)
-			             : errorRepository.findRowIndexByDataSetIdAndColumnIndexInOrderByRowIndexAsc(
-					             dataSetEntity.getId(), columnIndexMapping.keySet(), pageSize, startRow);
-			numberRows = numberInvalidRows;
+			errors = errorRepository.findByDataSetIdAndRowIndexBetween(dataSetEntity.getId(), startRow, endRow - 1);
 		}
 
+		List<List<Object>> data = dataSetService.encodeDataRows(dataSet, errors, startRow, rowNumbers, columnIndexMapping,
+		                                                        loadDataRequest);
+
+		if (calcRowNumbers) {
+			data = data.stream().map(a -> a.subList(0, a.size() - 1)).toList();
+		}
+
+		final int numberRows = countEntries(dataSetEntity.getId(), loadDataRequest.getHoldOutSelector(), rowSelector);
 		final int numberPages = (int) Math.ceil((float) numberRows / pageSize);
 
-		final DataSet dataSet = exportDataSet(dataSetEntity, columnNames, rowNumbers, false, 0, 0);
-		final Set<DataTransformationErrorEntity> errors2 = errorRepository.findByDataSetIdAndRowIndexIn(
-				dataSetEntity.getId(), rowNumbers);
-
-		final List<List<Object>> data = dataSetService.encodeDataRows(dataSet, errors2, 0, rowNumbers, columnIndexMapping, loadDataRequest);
-
 		final Map<Integer, DataRowTransformationError> rowErrors = new HashMap<>();
-		for (final var error : errors2) {
+		for (final var error : errors) {
 			if (!columnIndexMapping.containsKey(error.getColumnIndex())) {
 				continue;
 			}
 
 			if (!rowErrors.containsKey(error.getRowIndex())) {
-				rowErrors.put(error.getRowIndex(),
-				              new DataRowTransformationError(rowNumbers.indexOf(error.getRowIndex())));
+				final int index = rowNumbers != null ? rowNumbers.indexOf(error.getRowIndex()) : error.getRowIndex() - startRow;
+				rowErrors.put(error.getRowIndex(), new DataRowTransformationError(index));
 			}
 			final var rowError = rowErrors.get(error.getRowIndex());
 			final Integer columnIndex = columnIndexMapping.get(error.getColumnIndex());
@@ -588,80 +653,27 @@ public class DatabaseService {
 	}
 
 	/**
-	 * Exports a page of the transformation result associated with the given step in the given project.
-	 * Starts at the given page number taking the given page size into account.
-	 * Returns the columns with the given names in the given order.
-	 * If no column names are provided, all columns are exported.
-	 *
-	 * @param project         The project of which the data set should be exported.
-	 * @param columnNames     Names of the columns to export. If empty, all columns will be exported.
-	 * @param step            The step of which the data should be exported.
-	 * @param pageNumber      The number of the page to be exported.
-	 * @param pageSize        The number of items per page.
-	 * @param loadDataRequest Export settings.
-	 * @return The page containing the data and meta-data about the page.
-	 * @throws BadColumnNameException              If the data set does not contain a column with the given names.
-	 * @throws BadDataSetIdException               If no DataConfiguration is associated with the given project.
-	 * @throws InternalDataSetPersistenceException If the data set could not be exported due to an internal error.
-	 * @throws InternalIOException                 If the DataConfiguration could not be deserialized from the stored JSON.
-	 */
-	@Transactional
-	public TransformationResultPage exportTransformationResultPage(final ProjectEntity project, final Step step,
-	                                                               final List<String> columnNames, final int pageNumber,
-	                                                               final int pageSize,
-	                                                               final LoadDataRequest loadDataRequest)
-			throws BadDataSetIdException, InternalDataSetPersistenceException, BadColumnNameException, InternalIOException {
-		final DataSetEntity dataSetEntity = dataSetService.getDataSetEntityOrThrow(project, step);
-
-		final var startRow = (pageNumber - 1) * pageSize;
-		final var endRow = startRow + pageSize;
-
-		final Map<Integer, Integer> columnIndexMapping = dataSetService.getColumnIndexMapping(
-				dataSetEntity.getDataConfiguration(), columnNames);
-		final DataSet dataSet = exportDataSet(dataSetEntity, columnNames, null, true, startRow, pageSize);
-		final Set<DataTransformationErrorEntity> errors = errorRepository.findByDataSetIdAndRowIndexBetween(
-				dataSetEntity.getId(), startRow, endRow - 1);
-
-		final List<List<Object>> data = dataSetService.encodeDataRows(dataSet, errors, startRow, null,
-		                                                              columnIndexMapping, loadDataRequest);
-		final int numberRows = countEntries(dataSetEntity.getId());
-		final int numberPages = (int) Math.ceil((float) numberRows / pageSize);
-
-		final Map<Integer, DataRowTransformationError> rowErrors = new HashMap<>();
-		for (final var error : errors) {
-			if (!columnIndexMapping.containsKey(error.getColumnIndex())) {
-				continue;
-			}
-
-			if (!rowErrors.containsKey(error.getRowIndex())) {
-				rowErrors.put(error.getRowIndex(), new DataRowTransformationError(error.getRowIndex() - startRow));
-			}
-			final var rowError = rowErrors.get(error.getRowIndex());
-			final Integer columnIndex = columnIndexMapping.get(error.getColumnIndex());
-			rowError.addError(new DataTransformationError(columnIndex, error.getErrorType(), error.getOriginalValue()));
-		}
-
-		final List<DataRowTransformationError> transformationErrors = rowErrors.values().stream().toList();
-
-		return new TransformationResultPage(data, transformationErrors, null, pageNumber, pageSize, numberRows,
-		                                    numberPages);
-	}
-
-	/**
 	 * Exports the configuration with the given name
 	 *
 	 * @param configurationName Name of the configuration to export.
 	 * @param project           The project of which the configuration should be exported.
 	 * @return The configuration.
-	 * @throws BadConfigurationNameException             If the project does not have a configuration with the given name.
-	 * @throws InternalApplicationConfigurationException If the step that contains the configuration name is not used in any stage.
+	 * @throws BadConfigurationNameException If the project does not have a configuration with the given name.
 	 */
 	@Transactional
 	@Nullable
 	public String exportConfiguration(final String configurationName, final ProjectEntity project)
-			throws BadConfigurationNameException, InternalApplicationConfigurationException {
-		final ExternalProcessEntity process = getExternalProcessForConfigurationName(project, configurationName);
-		return process.getConfiguration();
+			throws BadConfigurationNameException {
+		final var config = stepService.getExternalConfiguration(configurationName);
+		final var configList = project.getConfigurationList(config);
+
+		if (configList == null || configList.getConfigurations().isEmpty()) {
+			throw new BadConfigurationNameException(BadConfigurationNameException.NO_CONFIGURATION,
+			                                        "No configuration in project '" + project.getId() +
+			                                        "' for name '" + configurationName + "' found!");
+		}
+
+		return configList.getConfigurations().get(0).getConfiguration();
 	}
 
 	/**
@@ -684,7 +696,7 @@ public class DatabaseService {
 					job.setStatus(null);
 					job.setExternalProcessStatus(ProcessStatus.NOT_STARTED);
 					job.setScheduledTime(null);
-					job.setProcessUrl(null);
+					job.setConfiguration(null);
 					job.getResultFiles().clear();
 
 					if (job instanceof DataProcessingEntity dataProcessing) {
@@ -708,6 +720,33 @@ public class DatabaseService {
 	 */
 	public int countEntries(final long dataSetId) throws InternalDataSetPersistenceException {
 		final String countQuery = "SELECT count(*) FROM " + getTableName(dataSetId) + ";";
+		try (final Statement countStatement = connection.createStatement()) {
+			try (ResultSet resultSet = countStatement.executeQuery(countQuery)) {
+				resultSet.next();
+				return resultSet.getInt(1);
+			}
+		} catch (SQLException e) {
+			throw new InternalDataSetPersistenceException(InternalDataSetPersistenceException.DATA_SET_COUNT,
+			                                              "Failed to count rows for dataset with ID '" + dataSetId +
+			                                              "'!", e);
+		}
+	}
+
+	/**
+	 * Counts the number of entries in the data set that comply the given selectors.
+	 *
+	 * @param dataSetId       The ID of the data set.
+	 * @param holdOutSelector Which hold-out rows should be selected.
+	 * @param rowSelector     Selector specifying which rows should be included regarding on the hold-out split.
+	 * @return The number of entries.
+	 * @throws InternalDataSetPersistenceException If the number could not be retrieved.
+	 */
+	public int countEntries(final long dataSetId, final HoldOutSelector holdOutSelector, final RowSelector rowSelector) throws InternalDataSetPersistenceException {
+		String countQuery = "SELECT count(*) FROM " + getTableName(dataSetId) + " as d ";
+		countQuery = appendHoldOutCondition(countQuery, holdOutSelector);
+		countQuery = appendRowSelectorCondition(countQuery, rowSelector, dataSetId);
+		countQuery += ";";
+
 		try (final Statement countStatement = connection.createStatement()) {
 			try (ResultSet resultSet = countStatement.executeQuery(countQuery)) {
 				resultSet.next();
@@ -792,7 +831,7 @@ public class DatabaseService {
 	private DataSetEntity doStoreDataConfiguration(final ProjectEntity project,
 	                                               final DataConfiguration dataConfiguration,
 	                                               final DataProcessingEntity dataProcessingEntity,
-	                                               final List<Step> processed
+	                                               final List<Job> processed
 	) throws BadDataConfigurationException, BadStateException {
 		checkFile(project, dataConfiguration);
 
@@ -844,13 +883,26 @@ public class DatabaseService {
 
 		// Insert data
 		try (final Statement insertStatement = connection.createStatement()) {
+			long rowNumber = 0;
 			for (final DataRow dataRow : dataSet.getDataRows()) {
 				final List<String> stringRow = new ArrayList<>();
+
+				// Add values from the data set
 				for (final Data data : dataRow.getData()) {
 					stringRow.add(convertDataToString(data));
 				}
-				final String values = String.join(",", stringRow);
+
+				// Add initial value for is_hold_out flag
+				stringRow.add(Boolean.FALSE.toString());
+
+				// Add row number for row_number
+				stringRow.add(String.valueOf(rowNumber));
+
+				String values = String.join(",", stringRow);
+
 				insertStatement.execute("INSERT INTO " + tableName + " VALUES (" + values + ")");
+
+				rowNumber++;
 			}
 		} catch (SQLException e) {
 			try {
@@ -888,9 +940,10 @@ public class DatabaseService {
 		};
 	}
 
-	private DataSet exportDataSet(final DataSetEntity dataSetEntity, List<String> columnNames,
-	                              @Nullable final List<Integer> rows, final boolean pagination,
-	                              final int startRow, final int pageSize)
+	private DataSet exportDataSet(final DataSetEntity dataSetEntity, final RowSelector rowSelector,
+	                              List<String> columnNames, final HoldOutSelector holdOutSelector,
+	                              final boolean pagination, final int startRow, final int pageSize,
+	                              final boolean exportRowIndexColumn)
 			throws BadColumnNameException, InternalDataSetPersistenceException, InternalIOException {
 		DataConfiguration dataConfiguration = getDetachedDataConfiguration(dataSetEntity);
 
@@ -904,17 +957,11 @@ public class DatabaseService {
 		// Export the data from the database
 		final List<DataRow> dataRows = new ArrayList<>();
 
-		// If only specific rows should be selected but none are given, return empty dataset
-		if (rows != null && rows.isEmpty()) {
-			return new DataSet(dataRows, dataConfiguration);
-		}
-
 		try (final Statement exportStatement = connection.createStatement()) {
 
-			final String exportQuery = rows != null
-			                           ? createSelectQuery(dataSetEntity.getId(), columnNames, rows)
-			                           : createSelectQuery(dataSetEntity.getId(), columnNames, pagination, startRow,
-			                                               pageSize);
+			final String exportQuery = createSelectQuery(dataSetEntity.getId(), rowSelector, columnNames,
+			                                             holdOutSelector, pagination, startRow, pageSize,
+			                                             exportRowIndexColumn);
 
 			try (final ResultSet resultSet = exportStatement.executeQuery(exportQuery)) {
 				while (resultSet.next()) {
@@ -924,6 +971,10 @@ public class DatabaseService {
 						final ColumnConfiguration columnConfiguration = dataConfiguration.getConfigurations()
 						                                                                 .get(columnIndex);
 						data.add(convertResultToData(resultSet, columnIndex + 1, columnConfiguration.getType()));
+					}
+
+					if (exportRowIndexColumn) {
+						data.add(convertResultToData(resultSet, dataConfiguration.getConfigurations().size() + 1, DataType.INTEGER));
 					}
 					dataRows.add(new DataRow(data));
 				}
@@ -964,20 +1015,20 @@ public class DatabaseService {
 		}
 	}
 
-	private String createSelectQuery(final Long dataSetId, final List<String> columnNames,
-	                                 final List<Integer> rowNumbers) {
-		final List<String> quotedColumnNames = columnNames.stream().map(it -> "\"" + it + "\"").toList();
-		return "SELECT " + String.join(",", quotedColumnNames) +
-		       " FROM (SELECT *, ROW_NUMBER() OVER () AS row_num FROM " +
-		       getTableName(dataSetId) + ") AS numbered_rows WHERE row_num IN (" +
-		       rowNumbers.stream().map(rowNumber -> rowNumber + 1).map(Object::toString)
-		                 .collect(Collectors.joining(",")) + ");";
-	}
+	private String createSelectQuery(final Long dataSetId, final RowSelector rowSelector, final List<String> columnNames,
+	                                 final HoldOutSelector holdOutSelector, final boolean pagination,
+	                                 final int startRow, final int pageSize, final boolean exportRowIndexColumn) {
+		final List<String> quotedColumnNames = columnNames.stream().map(it -> "\"" + it + "\"")
+		                                                  .collect(Collectors.toCollection(ArrayList::new));
+		if (exportRowIndexColumn) {
+			quotedColumnNames.add("\"" + DataschemeGenerator.ROW_INDEX_NAME + "\"");
+		}
 
-	private String createSelectQuery(final Long dataSetId, final List<String> columnNames, final boolean pagination,
-	                                 final int startRow, final int pageSize) {
-		final List<String> quotedColumnNames = columnNames.stream().map(it -> "\"" + it + "\"").toList();
-		String query = "SELECT " + String.join(",", quotedColumnNames) + " FROM " + getTableName(dataSetId);
+		String query = "SELECT " + String.join(",", quotedColumnNames) + " FROM " + getTableName(dataSetId) + " d";
+		query = appendHoldOutCondition(query, holdOutSelector);
+		query = appendRowSelectorCondition(query, rowSelector, dataSetId);
+
+		query += " ORDER BY " + DataschemeGenerator.ROW_INDEX_NAME + " ASC";
 		if (pagination) {
 			query += " LIMIT " + pageSize + " OFFSET " + startRow;
 		}
@@ -1004,6 +1055,7 @@ public class DatabaseService {
 					return new DecimalData(floatValue);
 				}
 				case INTEGER -> {
+					var a = resultSet.getObject(columnIndex);
 					return new IntegerData((Integer) resultSet.getObject(columnIndex));
 				}
 				case STRING -> {
@@ -1081,8 +1133,15 @@ public class DatabaseService {
 
 		dataSet.getDataTransformationErrors().clear();
 		dataSet.setStoredData(false);
+		dataSet.setConfirmedData(false);
 		dataSet.getStatisticsProcess().reset();
-		dataSetRepository.save(dataSet);
+
+		final OriginalDataEntity original = dataSet.getOriginalData();
+		if (original != null) {
+			original.setHasHoldOut(false);
+		}
+
+		projectRepository.save(dataSet.getProject());
 	}
 
 	/**
@@ -1121,6 +1180,47 @@ public class DatabaseService {
 
 				dataSet.addDataRowTransformationError(transformationErrorEntity);
 			}
+		}
+	}
+
+	private String appendHoldOutCondition(String query, final HoldOutSelector holdOutSelector) {
+		switch (holdOutSelector) {
+			case ALL -> {
+			}
+			case HOLD_OUT -> {
+				query = appendWhere(query);
+				query += DataschemeGenerator.HOLD_OUT_FLAG_NAME + " = true";
+			}
+			case NOT_HOLD_OUT -> {
+				query = appendWhere(query);
+				query += DataschemeGenerator.HOLD_OUT_FLAG_NAME + " = false";
+			}
+		}
+
+		return query;
+	}
+
+	private String appendRowSelectorCondition(String query, final RowSelector rowSelector, final Long dataSetId) {
+		switch (rowSelector) {
+			case ALL -> {}
+			case VALID -> {
+				query = appendWhere(query);
+				query += "NOT EXISTS (SELECT 1 FROM data_transformation_error_entity e WHERE e.data_set_id = " + dataSetId + " AND e.row_index = d." + DataschemeGenerator.ROW_INDEX_NAME + ")";
+			}
+			case ERRORS -> {
+				query = appendWhere(query);
+				query += "EXISTS (SELECT 1 FROM data_transformation_error_entity e WHERE e.data_set_id = " + dataSetId + " AND e.row_index = d." + DataschemeGenerator.ROW_INDEX_NAME + ")";
+			}
+		}
+
+		return query;
+	}
+
+	private String appendWhere(final String query) {
+		if (query.contains("WHERE")) {
+			return query + " AND ";
+		} else {
+			return query + " WHERE ";
 		}
 	}
 
